[tool.poetry]
name = "graphene-acl"
version = "1.0.2"
description = "Graphene Field ACL"
authors = ["Nick Harris <nick.harris@cybergrx.com>", "CyberGRX Engineering Team <engineers@cybergrx.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CyberGRX/graphene-acl"
keywords = ["graphene", "acl", "graphql", "python"]
exclude = ["env", "dist", "build", "tests", "tests.*"]

[tool.poetry.dependencies]
python = "^2.7 || ^3.4"
graphene = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
pytest-cov = "^2.6"
pytest-mock = "^1.10"
coverage = "^4.5"
coveralls = "^1.7"

[tool.poetry.extras]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
